# crm-hts

./: package-lock.json  pyproject.toml
src/: .env.template  main.py
src/alembic/: env.py
src/alembic/versions/: 2025_12_10_1344-f1bca90c0bed_create_user_table.py  2025_12_10_1348-b288ca8d431e_create_user_fipers.py  2025_12_10_1400-dfb1f97c7559_create_user_jupers.py  2025_12_10_1502-676aeea272dc_update_fipers_remove_weight_height.py  2025_12_10_1544-d73808ff8e3b_update_fipers_remove_address_split_.py  2025_12_10_1600-ad7c9ebda058_update_jupers_remove_address_split_.py  2025_12_10_1607-fbae5a753ad5_update_jupers_type_field.py  2025_12_10_1619-e6a9027b8f08_create_table_project.py  2025_12_10_1630-1c5f0fca9374_add_index_to_invoice_and_jupers.py  2025_12_17_0828-da6610e0e2ab_update_invoice_table_remove_payment_.py  2025_12_17_0838-18f63feb5905_add_payment_table.py  2025_12_17_0853-a712ba9aec89_add_foreign_key_payment_to_invoice.py  2025_12_17_0907-72b23d041199_add_foreign_key_payment_to_invoice.py  2025_12_17_0947-c0267c16716e_update_payment_date_and_payment_.py  2025_12_17_1130-81b7f6d949d4_update_invoice_to_project_relation.py
src/api/: __init__.py
src/api/api_v1/: __init__.py  fipers.py  invoice.py  jupers.py  payment.py  project.py  users.py
src/api/api_v1/crud/: fipers.py  invoice.py  jupers.py  (+3 more)
src/core/: column_types.py  config.py  encryption.py
src/core/models/: __init__.py  base.py  db_helper.py  fipers.py  invoice.py  jupers.py  payment.py  project.py  user.py
src/core/schemas/: fipers.py  invoice.py  jupers.py  payment.py  project.py  users.py
