[tool.poetry]
package-mode=false

[tool.poetry.dependencies]
python=">=3.12"
fastapi = "^0.122.0"
uvicorn = {extras = ["standart"], version = "^0.38.0"}
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.12.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
aiomysql = "^0.2.0"
alembic = "^1.17.2"
cryptography = "^43.0.0"
orjson = "^3.10.0"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)"
]
